--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:uw/VfjUpYrtj7mlbJ8bDm7iJHy5lDwVe1f8qZoJ+6xk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -51,6 +51,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-GOOGLE_CLIENT_ID
-GOOGLE_CLIENT_SECRET
-GOOGLE_REDIRECT
+GOOGLE_CLIENT_ID='530956232592-q5hdrbp4fl92njjq3q082nbhn8a1t08c.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET='69V5-WCrOP3gAQ2aZp3s74gL'
+GOOGLE_REDIRECT='http://localhost:8000/auth/google-callback'
