added few changes

--- a/.env
+++ b/.env
@@ -51,6 +51,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-GOOGLE_CLIENT_ID=''
-GOOGLE_CLIENT_SECRET=''
+GOOGLE_CLIENT_ID='530956232592-q5hdrbp4fl92njjq3q082nbhn8a1t08c.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET='69V5-WCrOP3gAQ2aZp3s74gL'
 GOOGLE_REDIRECT='http://localhost:8000/auth/google-callback'
